syntax = "proto2";

package com.google.sps.proto;

import "Order.proto";

option java_outer_classname = "FetchOrdersProto";

message FetchOrdersRequest {
  required string roomId = 1;
}

message FetchOrdersResponse {
  repeated com.google.sps.data.Order orders = 1;
}
